src/pages/HistoryPage.module.css
.history-frame {
  align-items: stretch;
  justify-content: flex-start;
  gap: 2rem;

  > section {
    align-items: stretch;
    justify-content: flex-start;
    gap: 0.5rem;

    > header {
      justify-content: flex-start;
      gap: 1rem;

      opacity: 0.6;
    }

    > article {
      align-items: stretch;
      justify-content: flex-start;
      gap: 0.5rem;

      cursor: pointer;
      margin: 0 -0.5rem;
      padding: 0.5rem;

      &:hover, &:active {
        border-radius: var(--radius);
        background-color: rgba(100, 100, 100, 0.5);
      }

      > .record-icon {
        padding: 0.5rem;
        border-radius: 50%;
        background-color: rgba(100, 100, 100, 0.5);

        > svg {
          height: 100%;
          width: auto;
          aspect-ratio: 1;
        }
      }

      > .record-body {
        flex-grow: 1;
        align-items: stretch;
        justify-content: space-between;

        overflow: hidden;

        > header {
          justify-content: flex-start;

          > h3 {
            font-size: 1rem;
          }
        }

        > footer {
          justify-content: flex-start;
          gap: 0.25rem;

          font-size: 0.8rem;
          color: var(--color-text-secondary);

          > .record-data-item {
            font-size: 0.6rem;
            padding: 0.2rem 0.3rem;
            border-radius: var(--radius);
            background-color: rgba(180, 180, 180, 0.2);
            color: var(--color-text);
          }
        }
      }

      > .record-trailer {
        > .record-time {
          gap: 0.25rem;
          font-variant-numeric: tabular-nums;
        }
      }
    }
  }
}

